@@ -1,5 +1,5 @@
 [tox]
-envlist = py37,py38,py39,py310,mypy,precom
+envlist = py37,py38,py39,py310,py311,mypy,precom
 
 [testenv]
 extras = tests
